# scys-crawler

./: .gitignore  README.md  crawler_activity_demo.py  crawler_demo.py  crawler_digested_topic_demo.py  crawler_fans_demo.py  crawler_hot_topic_demo.py  crawler_profile_demo.py  crawler_sc_demo.py  pyproject.toml
models/: __init__.py  base.py  sc_fans.py  sc_profile.py  sc_topic.py
services/: __init__.py  profile_storage.py
